[gd_scene load_steps=2 format=3 uid="uid://dsej7px63vceb"]

[ext_resource type="Script" uid="uid://bqahov5b3xshl" path="res://Scripts/PauseMenu.gd" id="1_ds4rd"]

[node name="Esc Menu" type="CanvasLayer"]
process_mode = 3
visible = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -132.0
offset_right = 64.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_ds4rd")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -136.0
offset_right = 72.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 232.0
alignment = 1

[node name="MainMenuButton" type="Button" parent="Control/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Main Menu"

[node name="SaveGameButton" type="Button" parent="Control/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Save Game"

[node name="SaveNameInput" type="LineEdit" parent="Control/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Save Text"
alignment = 1

[node name="LoadGameButton" type="Button" parent="Control/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Load Save
"

[node name="NextLevelButton" type="Button" parent="Control/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Next Level"

[node name="QuitGameButton" type="Button" parent="Control/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Quit Game"
